--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <img src="../img/Logo-Front.png" alt="Logo Front"><br><br>
-        <img src="../img/lemon-pie 1.jpg" alt="Foto lemon pie">
+        <img src="../4S/img/Logo-Front.png" alt="Logo Front"><br><br>
+        <img src="../4S/img/lemon-pie 1.jpg" alt="Foto lemon pie">
     </header>
     
     <main>
